<resources>
    <string name="version" translatable="false">3.0.17a</string>
    <string name="hotfix" translatable="false"> fix 3</string>
    <string name="app_name">c0r0vans α</string>
    <string name="login_window">Login</string>
    <string name="serveradressOld" translatable="false">https://alpha3-corovans.rhcloud.com</string>
    <string name="serveradress" translatable="false">https://alpha5-corovans.rhcloud.com</string>
    <string name="supportdress" translatable="false">https://support-merchantarg.rhcloud.com</string>
    <string name="title_activity_main_window">c0r0vans</string>
    <string name="action_window">Actions</string>
    <string name="route_window">Routes</string>
    <string name="begin">Begin:</string>
    <string name="end">End:</string>
    <string name="gold">Gold:</string>
    <string name="time_to_go">Travel time:</string>
    <string name="name">Name:</string>
    <string name="caravans">Caravans:</string>
    <string name="hirelings">Hirelings:</string>
    <string name="onroute">Route started.</string>
    <string name="experience">Exp</string>
    <string name="level">Level:</string>
    <string name="information">Info</string>
    <string name="upgrades">Upg</string>
    <string name="tnl">To next level:</string>
    <string name="ambushes">Ambushes:</string>
    <string name="ambushes_left">Ambushes left:</string>
    <string name="title_activity_main">Information</string>
    <string name="ambush">Ambush</string>
    <string name="LoginComplete">Login complete. Waiting GPS.</string>
    <string name="settings_display">Display settings</string>
    <string name="settings_ambush_radius">Ambush radius</string>
    <string name="settings_city_radius">City radius</string>
    <string name="setings_media">Media settings</string>
    <string name="setings_apply">Apply</string>
    <string name="setings_cancel">Cancel</string>
    <string name="settings_music">Music</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_show_routes">Show trade routes</string>
    <string name="settings_debug">Debug</string>
    <string name="settings_debug_net">Log net message</string>
    <string name="settings_graphics">Graphics</string>
    <string name="settings_graphics_tilt">Isometric</string>
    <string name="message_notification_title_template">Message: %1$s</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="guild_desc">Гильдия - старейшая организация, чье влияние на мир трудно переоценить. Добившись монопольного влияния в мировой экономике Гильдия занялась исследованием новых территорий, прокладыванием дорог, развитием науки и образования. В настоящее время позиции Гильдии значительно потеснены Цеховым альянсом и Лигой независимых купцов, тем не менее Гильдия по-прежнему сохраняет экономическое влияние и большой политический вес во многих государствах.</string>
    <string name="guild_name">Guild “Wheel of Progress”</string>
    <string name="alliance_desc">Цехи ремесленников долгое время находились в зависимости от Гильдии, которая контролировала рынок и диктовала свои условия цехам. Заключение крупнейшими цехами альянса положило конец безраздельной монополии Гильдии. Доходы цехов Альянса резко выросли, что привело к их быстрому развитию. Начав свою деятельность как промышленная монополия, в настоящее время Альянс теснит Гильдию во многих областях торговли и не уступает ей во влиянии.</string>
    <string name="alliance_name">Alliance of Workers</string>
    <string name="legue_name">League of Independent merchants</string>
    <string name="legue_text">Независимые купцы существовали всегда. В поисках выгоды они все время продумывали новые торговые маршруты, сокращали издержки и повышали привлекательность своей продукции для покупателя. Однако конкуренция на рынке не была честной - и Гильдия и Альянс использовали свое влияние для создания неблагоприятных условий успешным купцам. Для защиты своих интересов независимые купцы создали Лигу. Не обладая монопольным положением ни в одной отрасли Лига уверенно чувствует себя во всех областях. Умение Лиги работать с покупателями и максимизировать свою прибыль позволяет ей конкурировать с Гильдией и Альянсом в их традиционных сферах влияния. В настоящее время все три организации обладают примерно равным влиянием и потенциалом.</string>
    <string name="distance">%1$dм</string>
    <string name="upgrade_bought">Upgrade "%s" has bought.</string>
    <string name="route_finish">Rote from %1$s has been finished in "%2$s"</string>
    <string name="route_started">Route has started in "%1$s"</string>
    <string name="login_button">Login</string>
    <string name="login_button_run">Login …</string>
    <string name="password_label">Password</string>
    <string name="message_notification_placeholder_text_template">-</string>
    <string name="about_text">Copyright
        Program use:
Images and Graphics based on graphics published on http://nicubunu.ro/ under Public domain licence.
Images and Graphics based on graphics published on https://openclipart.org/detail/16553/rogue-character under Public domain licence.
Music and sounds published on https://freesound.org under Attribution Licence

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
Using this software you accept gathering data by GoogleAnalitics Service. Data gathered by service does not include personal data, only information about actions you perform while application using.

Software provide for alpha test purpose. If you are not accepted for alpha test by Developers of software you may not use this software.

All rights reserved to Circle of Eternity</string>
    <string name="about_title">About…</string>
    <string name="distance_mesure" >%1$dм</string>
    <string name="title_activity_loading">Corovans Loading</string>
    <string name="LogoText">Logo of Circle of Eternity</string>
    <string name="vibrate_on">Vibration</string>
    <string name="enter_google_account">Sign in Google</string>
    <string name="done_google_account">Sign in complete</string>
    <string name="data_init">Data initialization</string>
    <string name="init_object">Object Loading</string>
    <string name="city_lvl_required" >Need town level %1$d\n</string>
    <string name="need_more_gold">Need %1$s more gold!\n</string>
    <string name="need_higher_lvl">Need Player Level %1$d\n</string>
    <string name="price" >%1$s\" for %2$s gold(base price: %3$s Skill Multiplier:%4$s).\n%5$s</string>
    <string name="unknown_upgrade">"%1$s\". "</string>
    <string name="Question_Symbol" translatable="false">\?</string>
    <string name="choose_faction">Choose Faction.</string>
    <string name="accept">Accept</string>
    <string name="previous" translatable="false"><![CDATA[<]]></string>
    <string name="next" translatable="false"><![CDATA[>]]></string>
    <string name="income">Income per hour:</string>
    <string name="ambush_left">Ambushes left:</string>
    <string name="ambush_set">Ambushes:</string>
    <string name="caravans_count">Caravans:</string>
    <string name="back" translatable="false">↩</string>
    <string name="ambushs">Ambushes</string>
    <string name="faction_influence">Faction influence</string>
    <string name="city_grows">City population</string>
    <string name="route_count">Number of routes:</string>
    <string name="market">Shop</string>
    <string name="accept_buy_upgrade" >Are you sure you want buy \"%1$s\" %2$d level for %3$s gold?</string>
    <string name="accept_buy_upgrade_unknown" >Are you sure you want buy \"%1$s\"?</string>
    <string name="nickname">Nickname:</string>
    <string name="invite">Invite:</string>
    <string name="registration">Registration</string>
    <string name="route_info_line" >%1$dm. %2$s❍. %3$s⌛</string>
    <string name="close">Close</string>
    <string name="yes" translatable="false">✔</string>
    <string name="no" translatable="false">✖</string>
    <string name="fast_actions">Fast actions</string>
    <string name="autoclose">Close on action</string>
    <string name="location">Location</string>
    <string name="background_gps">GPS on background</string>
    <string name="gps_rating">GPS rating</string>
    <string name="course_on_move">Course by move</string>
    <string name="qiestion" translatable="false">\?</string>
    <string name="pages" translatable="false">%1$d/%2$d</string>
    <string name="upgrade_text">%1$s\n%2$s\n%3$s❍(Skill Multiplier:%4$s)</string>
    <string name="leftHirelings">Left to hire:</string>
    <string name="hire">Hire: %1$d of %2$d for %3$s</string>
    <string name="put_obsidian">%1$s Obsidian: (%2$d). In Tower(%3$d)</string>
    <string name="put">Put</string>
    <string name="take">Take</string>
    <string name="server_unavaible">Server unavaible.\nRetry in 30 seconds.</string>
    <string name="city_created">Town appear near you at %1$d meters.</string>
    <string name="gold_amount" translatable="false">%1$s ❍</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="build_area_settings">Build helper</string>
    <string name="foundedCities">Towns:</string>
    <string name="асities">Towns:</string>
    <string name="sk_name_speed">Speed</string>
    <string name="sk_name_cargo">Cargo</string>
    <string name="sk_name_bargain">Bargain</string>
    <string name="sk_name_ambushes">Ambush\'s Size</string>
    <string name="sk_name_set_ambushes">Ambush\'s Control</string>
    <string name="sk_name_founder">Founder</string>
    <string name="sk_name_paladin">Access Radius</string>
    <string name="founded">Founded by:</string>
    <string name="get_location">Acquire location.</string>
    <string name="location_acquire">Location acquired.</string>
    <string name="exit">Exit</string>
    <string name="network_error">Network Error</string>
    <string name="security">Security</string>
    <string name="d_d" translatable="false">%1$d/%2$d</string>
    <string name="s_s" translatable="false">%1$s(%2$s)</string>
    <string name="notification">Notify sound</string>
    <string name="screen_off">Allow screen off</string>
    <string name="x4" translatable="false">x4</string>
    <string name="x2" translatable="false">x2</string>
    <string name="x1" translatable="false">x1</string>
    <string name="sortby">Sort</string>
    <string name="lngth">by length</string>
    <string name="byincome">by income</string>
    <string name="citydistance">by distance to city</string>
    <string name="caravandistance">by distance to corovan</string>
    <string name="s_d" translatable="false">%1$s %2$d</string>
    <string name="city_indo">Distance: %1$dm Cost:%2$d❍</string>
    <string name="atlas">Atlas</string>
    <string name="approve_route_remove">You are going to delete unfinished route. Are you sure?</string>
    <string name="effect">Effect:%s\n</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night mode</string>
    <string name="obsidian">Obsidian:</string>
    <string name="message_system">System</string>
    <string name="message_alert">Alert</string>
    <string name="message_clear" translatable="false">✖</string>
    <string name="confirm_put">Are you sure? you want to put obsidian in tower? You won\'t get it back.</string>
    <string name="do_google_authorization">Google Sign-in.</string>
    <string name="google_authorization_done">Google Sign-in done.</string>
    <string name="gps_smooth">GPS Smooth</string>
</resources>