<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="9"
        android:columnOrderPreserved="true"
        android:rowOrderPreserved="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediumTextNP"
            android:text="@string/level" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediumTextNP"
            android:id="@+id/levelInfo"
            android:layout_gravity="end"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediumTextNP"
            android:text="@string/experience"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expInfo"
            style="@style/MediumTextNP"
            android:layout_gravity="end"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediumTextNP"
            android:text="@string/tnl"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tnlInfo"
            android:layout_gravity="end"
            style="@style/MediumTextNP"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gold"
            style="@style/MediumTextNP"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goldInfo"
            android:layout_gravity="end"
            style="@style/MediumTextNP"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            style="@style/MediumTextNP"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profit"
            android:layout_gravity="end"
            style="@style/MediumTextNP"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obsidian"
            style="@style/MediumTextNP"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/obsidianInfo"
            android:layout_gravity="end"
            style="@style/MediumTextNP" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caravans_count"
            style="@style/MediumTextNP"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/caravanInfo"
            android:layout_gravity="end"
            style="@style/MediumTextNP"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ambush_set"
            style="@style/MediumTextNP"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ambushSetInfo"
            android:layout_gravity="end"
            style="@style/MediumTextNP"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hirelings"
            style="@style/MediumTextNP"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hirelings"
            android:layout_gravity="end"
            style="@style/MediumTextNP"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leftHirelings"
            style="@style/MediumTextNP"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/leftHirelings"
            android:layout_gravity="end"
            style="@style/MediumTextNP"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foundedCities"
            style="@style/MediumTextNP"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foundedCities"
            android:layout_gravity="end"
            style="@style/MediumTextNP"/>
    </GridLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/factionSymbol"
        android:contentDescription="@string/choose_faction"
        android:layout_gravity="center_horizontal" />

</LinearLayout>