<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/layouts"
    tools:context="utility.settings.Settings">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/cancel">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/security"
                android:id="@+id/securityTitle"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:id="@+id/accountName"
                android:layout_alignBaseline="@+id/exitAccount"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exitAccount"
                android:text="@string/exit"
                android:layout_below="@+id/securityTitle"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                style="@style/CommonButton"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/settings_display"
                android:id="@+id/displayTitle"
                android:layout_below="@id/exitAccount"
                android:layout_centerHorizontal="true"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/settings_ambush_radius"
                android:layout_alignBottom="@+id/ambushRad"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ambushRad"
                android:layout_below="@+id/displayTitle"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:checked="true"
                 />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/settings_city_radius"
                android:layout_alignBottom="@+id/cityRad"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cityRad"
                android:checked="true"
                android:layout_below="@+id/ambushRad"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/settings_show_routes"
                android:layout_alignBottom="@+id/routeShow"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/routeShow"
                android:checked="true"
                android:layout_below="@+id/cityRad"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/build_area_settings"
                android:layout_alignBottom="@+id/buildArea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buildArea"
                android:checked="true"
                android:layout_below="@+id/routeShow"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/setings_media"
                android:id="@+id/mediaTitle"
                android:textStyle="bold"
                android:layout_below="@+id/buildArea"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/settings_music"
                android:layout_alignBottom="@+id/musicOn"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/musicOn"
                android:layout_below="@+id/mediaTitle"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/settings_sound"
                android:layout_alignBottom="@+id/soundOn"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/soundOn"
                android:checked="true"
                android:layout_below="@+id/musicOn"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/vibrate_on"
                android:layout_alignBottom="@+id/vibrateOn"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vibrateOn"
                android:checked="true"
                android:layout_below="@+id/soundOn"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/notification"
                android:layout_alignBottom="@+id/notifySound"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/notifySound"
                android:checked="true"
                android:layout_below="@+id/vibrateOn"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/settings_graphics"
                android:id="@+id/graphicsTitle"
                android:textStyle="bold"
                android:layout_below="@+id/notifySound"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/settings_graphics_tilt"
                android:layout_alignBottom="@+id/useTilt"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/useTilt"
                android:checked="false"
                android:layout_below="@+id/graphicsTitle"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/fast_actions"
                android:layout_alignBottom="@+id/usePadding"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/usePadding"
                android:checked="false"
                android:layout_below="@+id/useTilt"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/autoclose"
                android:layout_alignBottom="@+id/closeWindow"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/closeWindow"
                android:checked="false"
                android:layout_below="@+id/usePadding"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/location"
                android:id="@+id/locationTitle"
                android:textStyle="bold"
                android:layout_below="@+id/closeWindow"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/background_gps"
                android:layout_alignBottom="@+id/gpsOn"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textView" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gpsOn"
                android:checked="false"
                android:layout_below="@+id/locationTitle"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/gps_rating"
                android:id="@+id/gpsRatingTitle"
                android:layout_below="@+id/gpsOn"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gpsRate"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:max="4"
                android:progress="2"
                android:layout_alignTop="@+id/gpsRatingTitle"
                android:layout_alignBottom="@+id/gpsRatingTitle"
                android:layout_toEndOf="@+id/textView"
                android:layout_toRightOf="@+id/textView" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/course_on_move"
                android:layout_alignBottom="@+id/trackBearing"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trackBearing"
                android:checked="false"
                android:layout_below="@+id/gpsRatingTitle"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/settings_debug"
                android:id="@+id/debugTitle"
                android:textStyle="bold"
                android:layout_below="@+id/trackBearing"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumText"
                android:text="@string/network_error"
                android:layout_alignBottom="@+id/netErrorLogOn"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/netErrorLogOn"
                android:checked="false"
                android:layout_below="@+id/debugTitle"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setings_cancel"
        style="@style/CommonButton"
        android:id="@+id/cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setings_apply"
        style="@style/CommonButton"
        android:id="@+id/apply"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qiestion"
        android:id="@+id/about_button"
        style="@style/CommonButton"
        android:maxWidth="60dp"
        android:minWidth="2dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
         />

</RelativeLayout>
